# wob.com-data-scrapper

./: README.md  db_book.py  db_other.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
files_for_testing/: desired_html_elements_main_page.txt  html_main_page.txt  page_not_found_html.txt  product_info_html.txt
src/wob/: database.py  database_models.py  db_book.py  db_other.py  main.py  sqlalchemy.sqlite.books_info  sqlalchemy.sqlite.other_info
tests/: conftest.py  sqlalchemy.sqlite.books_info  sqlalchemy.sqlite.other_info  test_wob.py  test_wob_nested_functions.py
