[metadata]
name = wob
description = product info scrapper
author = Deep Sarker
platform = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package = wob
install_requires =
    requests>=2.28.1
    types_requests>=2.28.8
    beautifulsoup4>=4.11.1
    SQLAlchemy>=1.4.40

include_package_data = True
package_dir=
    =src
packages=find:
[options.packages.find]
where=src


[options.extras_require]
test =
    fake8>=5.0.4
    pytest>=7.1.2
    pytest_cov>=3.0.0
    mypy>=0.971
    tox>=3.25.1

[options.package_data]
wob = py.typed

[flake8]
max-line-length = 160

